# looker-load-testing

./: .gitignore  CODE_OF_CONDUCT.md  Pipfile  README.md  locust_exporter.py  locustfile.py  old_readme.md  pyproject.toml
.github/workflows/: nfo_build.yml
configs/: README.md
credentials/: README.md
locust_test_scripts/: default_dashboard_loadtest.py  locustfile-default.py  locustfile-new.py  multiple_content.py  scenario2.py
nuke-from-orbit/: README.md  config.json.example  loadtester  looker_setup.py  params.json.example  parse_kube_templates.py
nuke-from-orbit/docker-image/: README.md
nuke-from-orbit/kubernetes-config/: cloudwatch-config.yaml  cloudwatch-controller.yaml  config-default.yaml  config-map.yaml  grafana-config.yaml  grafana-controller.yaml  grafana-dashboard-json-config-map.yaml  grafana-dashboard-provision-config-map.yaml  grafana-datasource-config-map.yaml  grafana-deployment.yaml  grafana-service.yaml  loadtest-cert.yaml  loadtest-ingress.yaml  locust-controller.yaml  locust-exporter-controller.yaml  locust-exporter-service.yaml  locust-master-controller.yaml  locust-worker-controller.yaml  looker-metrics-config.yaml  looker-metrics-controller.yaml  parse_kube_templates.py  prometheus-config.yaml  prometheus-controller.yaml  prometheus-deployment.yaml  prometheus-service.yaml  render_kube_templates.py
nuke-from-orbit/looker-provisioning/: ini_template.ini  looker_setup.py
nuke_from_orbit/: README.md  cli.py  loadtester  pyproject.toml
tests/: test_cli.py  test_cloud_build.py  test_setup_command.py
(+73 files in other folders)
